backup/masterpackage-retrieve/unpackaged/unpackaged/objects/Conversion_Comms__e.object
<CustomObject>
    <description>Platform Event to send Conversion related Comms</description>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Elapsed__c</fullName>
        <label>Days Elapsed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>EventName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Conversion Comms</label>
    <pluralLabel>Conversion Comms</pluralLabel>
</CustomObject>